data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_456.wast
;; 7. Develop a test with alternating `nop` and `br_if` with conditions based on a counter, verifying correct execution in WebAssembly; observe wizard_engine possibly affecting conditional evaluations via debug traces.

(assert_invalid
  (module 
    (func $alt-nop-br_if (param i32) 
      (local.get 0)
      (loop
        (nop)
        (local.get 0)
        (br_if 0)
        (local.set 0 (i32.sub (local.get 0) (i32.const 1)))
        (br 0)))
    "type mismatch")
)